Generate compiler options file to support Java11 in IDEA.
The change to JMX in CASSANDRA-15653 prevents the IDEA project from
compiling under JDK11.  This change adds the required compiler flag
when the project is upgraded from Java1.8 to Java11.

Patch by Jon Meredith; Reviewed by ? for CASSANDRA-15738